tests/snapshots/runtime_error_fixtures/base_map_callback_arity.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/base_map_callback_arity.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E1000]: map: callback error at index 0: wrong number of arguments

function: concat/2
  expected: 2
  got: 1

  examples/runtime_errors/base_map_callback_arity.flx:1:1
  |
1 | fn main() {
  | ^^^^^^^^^^^
2 |     let ignored = map(#[1], concat)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | }
  | ^

Hint:
  concat(a, b)

Stack trace:
  at main (examples/runtime_errors/base_map_callback_arity.flx:1:1)
  at <main>
== jit ==
status: 1
stdout:
<empty>
stderr:
• 1 error • examples/runtime_errors/base_map_callback_arity.flx
error[E1000]: map: callback error at index 0: wrong number of arguments

function: concat/2
  expected: 2
  got: 1

  examples/runtime_errors/base_map_callback_arity.flx:2:19
  |
2 |     let ignored = map(#[1], concat)
  |                   ^^^^^^^^^^^^^^^^^

Hint:
  concat(a, b)
